apps/gitea/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    gateway-access: public
    security.yiannis.io/require-harbor: "true"
